--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- Bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel:wght@500;600&family=M+PLUS+1:wght@100;200;400;500;600&family=Playfair+Display+SC:wght@400;700&family=Raleway:wght@300&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,500;8..144,700&family=Smooch+Sans:wght@300;400;500&family=Zen+Loop&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,500;8..144,700&family=Smooch+Sans:wght@200;300&family=Zen+Loop&display=swap" rel="stylesheet">
+    
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- Fontawesome - Icons -->
